# exeland

./: .gitignore  README.md  arquitectura-factoria-excel-no borrar-.txt  pyproject.toml  requirements.txt  vercel.json
api/: Dockerfile  main.py  requirements.txt
assets/: brand.json
catalog/: formulas.yaml  product_registry.yaml  validations.yaml
scripts/: export_skills_catalog.py  prepare_static_deploy.py
specs/: auto_ganancia.yaml  auto_stock.yaml  caja_diaria.yaml  compras_y_proveedores.yaml  control_de_gastos.yaml  costos_por_producto.yaml  cuentas_corrientes_clientes.yaml  flujo_de_fondos.yaml  precio_margen.yaml  proyeccion_ventas.yaml  punto_equilibrio.yaml  rentabilidad_por_producto.yaml  simulador_inflacion.yaml  stock_control.yaml
src/exceland_factory/: __init__.py  __main__.py  cli.py  config.py  factory.py  matcher.py  models.py  nl_parser.py  postprocess.py  protection.py  registry.py  spec_compiler.py  style_system.py  validators.py  warehouse.py  workbook_builder.py
tests/: conftest.py  test_build_all.py  test_build_cashflow.py  test_dashboard.py  test_dashboard_v2.py  test_engine_v2.py  test_formula_registry.py  test_hardening.py  test_input_v2.py  test_models_v2.py  test_postprocess.py  test_skill_runner.py  test_spec_validation.py
warehouse/: manifest.json
warehouse/templates/: auto_stock.xlsx  caja_diaria.xlsx  compras_y_proveedores.xlsx  conciliador_bancario_macro.xlsx  control_de_gastos.xlsx  costos_por_producto.xlsx  cuentas_corrientes_clientes.xlsx  flujo_de_fondos.xlsx  (+6 more)
web/: index.html  skills.json  skills_catalog.json
(+27 files in other folders)
